<resources>
    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>
    <string name="bn1">按钮一</string>
    <string name="bn2">按钮二</string>
    <string name="bn3">按钮三</string>
    <string name="bn4">按钮四</string>
    <string name="bn5">按钮五</string>
    <string name="tip">jinagyi</string>
    <string name="other_activity">other_activity</string>
</resources>
